--- a/nav.html
+++ b/nav.html
@@ -10,10 +10,10 @@
 <body>
     <nav>
         <ul>
-            <li class="hi"><a style="font-style: oblique;" href="#">Home</a></li>
-            <li class="hi"><a href="#">About</a></li>
-            <li class="hi"><a href="#">Work</a></li>
-            <li class="hi"><a href="#">Contact Us</a></li>
+            <li><a style="font-style: oblique;" href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Contact Us</a></li>
         </ul>
     </nav>
     
